# PerryEngine

./: README.md
Engine/: CMakeLists.txt  Engine_config.h  bestfitcube.cpp  bestfitcube.h  camera.cpp  camera.h  collisiontriangle.cpp  collisiontriangle.h  config.h.in  dynamicmesh.cpp  dynamicmesh.h  findGLEW.cmake  findOpenCL.cmake  font.h  fullscreenblit.cpp  fullscreenblit.h  fxaa.frag  fxaa_interface.cpp  fxaa_interface.h  gamma.cpp  gamma.h  glperfcounter.cpp  glperfcounter.h  glsl.cpp  glsl.h  histogram.h  image.cpp  image.h  light.cpp  light.h  log.cpp  log.h  material.cpp  material.h  matrix.h  matrix.inl  mesh.cpp  mesh.h  miniball.h  model.cpp  (+16 more)
Engine/ExeDir/: blit.frag  blit.vert  gamma.frag  light.final.frag  light.pcf.frag  light.pcss.frag  light.specular.frag  light.start.frag  material.frag  material.vert  ssao.frag  ssao.veryLow.frag
ObjLoader/: CMakeLists.txt  config.h  objloader.cpp  objloader.h
PerryEditor/: Cursors.qrc  Icons.qrc  PerryEditor.pro  capsule.h  colorcombobox.cpp  colorcombobox.h  editorcamera.cpp  editorcamera.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialeditor.cpp  materialeditor.h  materialeditor.ui  mouseaction.h  mouseactions.cpp  mouseactions.h  mousemove.cpp  mousemove.h  mouserotate.cpp  mouserotate.h  mouseselect.cpp  mouseselect.h  perryview.cpp  perryview.h  qimageloader.cpp  qimageloader.h  qlog.cpp  qlog.h  qlog.ui  renderingoptions.cpp  renderingoptions.h  renderingoptions.ui  savescreenshot.cpp  savescreenshot.h  savescreenshot.ui  selection.cpp  selection.h  slidercombobox.cpp  (+9 more)
PerryEditor/cursors/: arrows.xcf
PngLoader/: CMakeLists.txt  PngLoader_config.h  findLibPNG.cmake  pngloader.cpp  pngloader.h
Sample/: CMakeLists.txt  Sample_config.h  WinFont.cpp  X11Font.cpp  config.h.in  findGLFW.cmake  game.cpp  game.h  keymanager.cpp  keymanager.h  main.cpp  rotatearoundcamera.cpp  rotatearoundcamera.h  window.cpp  window.h
Sample/ExeDir/: fxaa.frag  gamma.frag  histogram.frag  histogram.geom  histogram.vert  light.final.frag  light.frag  light.hard.frag  light.pcsm.frag  light.specular.frag  simplewriter.frag  simplewriter.vert  ssao.old.frag  ssao_ex.frag  test.raw
